--- a/ehr-meditech-sizing/ehr-meditech-sizing_acknowledgments.adoc
+++ b/ehr-meditech-sizing/ehr-meditech-sizing_acknowledgments.adoc
@@ -18,6 +18,8 @@ summary: The following people contributed to the writing and creation of this gu
 // 2021-05-20 13:29:17.673001
 //
 
+The following people contributed to the writing and creation of this guide.
+
 * Brandon Agee, Technical Marketing Engineer, NetApp
 * John Duignan, Solutions Architect - Healthcare, NetApp
 * Ketan Mota, Product Manager, NetApp
