--- a/ehr-meditech-deploy/ehr-meditech-deploy_base_infrastructure_configuration.adoc
+++ b/ehr-meditech-deploy/ehr-meditech-deploy_base_infrastructure_configuration.adoc
@@ -32,15 +32,15 @@ The following network connections must be in place before you configure the infr
 
 The following storage connections must be in place before you configure the infrastructure:
 
-* Storage port interface groups (ifgroups, vPC).
-* 10Gb link to switch N9K-A.
-* 10Gb link to switch N9K-B.
+* Storage port interface groups (ifgroups, vPC)
+* 10Gb link to switch N9K-A
+* 10Gb link to switch N9K-B
 * In- band management (active-passive bond):
 ** 1Gb link to management switch N9K-A
 ** 1Gb link to management switch N9K-B
-* 32Gb FC end-to-end connectivity through Cisco MDS switches; single initiator zoning configured.
-* FC SAN boot to fully achieve stateless computing; servers are booted from LUNs in the boot volume that is hosted on the AFF storage cluster.
-* All MEDITECH workloads are hosted on FC LUNs, which are spread across the storage controller nodes.
+* 32Gb FC end-to-end connectivity through Cisco MDS switches; single initiator zoning configured
+* FC SAN boot to fully achieve stateless computing; servers are booted from LUNs in the boot volume that is hosted on the AFF storage cluster
+* All MEDITECH workloads are hosted on FC LUNs, which are spread across the storage controller nodes
 
 == Host software
 
@@ -51,4 +51,4 @@ The following software must be installed:
 * VSC installed and registered in VMware vCenter
 * NetApp cluster configured
 
-link:ehr-meditech-deploy_cisco_ucs_blade_server_and_switch_configuration.html[Next: Cisco UCS Blade Server and Switch Configuration]
+link:ehr-meditech-deploy_cisco_ucs_blade_server_and_switch_configuration.html[Next: Cisco UCS Blade Server and Switch Configuration.]
