--- a/ehr-meditech-deploy/ehr-meditech-deploy_cisco_ucs_blade_server_and_switch_configuration.adoc
+++ b/ehr-meditech-deploy/ehr-meditech-deploy_cisco_ucs_blade_server_and_switch_configuration.adoc
@@ -18,7 +18,6 @@ summary: This document provides high-level guidance on the basic configuration o
 // 2021-05-07 11:13:53.168812
 //
 
-[.lead]
 The FlexPod for MEDITECH software is designed with fault tolerance at every level. There is no single point of failure in the system. For optimal performance, Cisco recommends the use of hot spare blade servers.
 
 This document provides high-level guidance on the basic configuration of a FlexPod environment for MEDITECH software. In this section, we present high-level steps with some examples to prepare the Cisco UCS compute platform element of the FlexPod configuration. A prerequisite for this guidance is that the FlexPod configuration is racked, powered, and cabled per the instructions in the https://www.cisco.com/c/en/us/td/docs/unified_computing/ucs/UCS_CVDs/flexpod_esxi65u1_n9fc.html[FlexPod Datacenter with Fibre Channel Storage using VMware vSphere 6.5 Update 1, NetApp AFF A-series and Cisco UCS Manager 3.2 ^]CVD.
@@ -40,7 +39,7 @@ ip route 0.0.0.0/0 <ib-mgmt-vlan-gateway>
 copy run start
 ....
 
-. Create the VLANs for the solution on each switch, using the global configuration mode:
+. Create the VLANs for the solution on each switch using the global configuration mode:
 +
 ....
 vlan <ib-mgmt-vlan-id>
@@ -57,7 +56,7 @@ exit
 copy run start
 ....
 
-. Create the Network Time Protocol (NTP) distribution interface, port channels, port channel parameters, and port descriptions for troubleshooting per https://www.cisco.com/c/en/us/td/docs/unified_computing/ucs/UCS_CVDs/flexpod_esxi65u1_n9fc.html[FlexPod Datacenter with Fibre Channel Storage using VMware vSphere 6.5 Update 1, NetApp AFF A-series and Cisco UCS Manager 3.2 ^]CVD .
+. Create the Network Time Protocol (NTP) distribution interface, port channels, port channel parameters, and port descriptions for troubleshooting per https://www.cisco.com/c/en/us/td/docs/unified_computing/ucs/UCS_CVDs/flexpod_esxi65u1_n9fc.html[FlexPod Datacenter with Fibre Channel Storage using VMware vSphere 6.5 Update 1, NetApp AFF A-series and Cisco UCS Manager 3.2 ^]CVD.
 
 == Cisco MDS 9132T configuration
 
@@ -90,7 +89,7 @@ vsan <vsan-a-id> interface port-channel112
 +
 The port channel numbers in the last two lines of the command were created when the individual ports, port channels, and descriptions were provisioned by using the reference document.
 
-.. For the Fabric- B MDS switch, run the following commands:
+.. For the Fabric-B MDS switch, run the following commands:
 +
 ....
 vsan database
@@ -109,7 +108,7 @@ The port channel numbers in the last two lines of the command were created when 
 
 . For each FC switch, create device alias names that make the identification of each device intuitive for ongoing operations by using the details in the reference document.
 . Finally, create the FC zones by using the device alias names that were created in step 4 for each MDS switch as follows:
-.. For the Fabric- A MDS switch, run the following commands:
+.. For the Fabric-A MDS switch, run the following commands:
 +
 ....
 configure terminal
@@ -132,7 +131,7 @@ exit
 show zoneset active vsan <vsan-a-id>
 ....
 
-.. For the Fabric- B MDS switch, run the following commands:
+.. For the Fabric-B MDS switch, run the following commands:
 +
 ....
 configure terminal
@@ -189,4 +188,4 @@ To set up the Cisco UCS compute platform, complete the following procedures. Per
 
 For the detailed steps to configure each key element of the Cisco UCS service profiles for FlexPod, see the https://www.cisco.com/c/en/us/td/docs/unified_computing/ucs/UCS_CVDs/flexpod_esxi65u1_n9fc.html[FlexPod Datacenter with Fibre Channel Storage using VMware vSphere 6.5 Update 1, NetApp AFF A-series and Cisco UCS Manager 3.2 ^]CVD document.
 
-link:ehr-meditech-deploy_esxi_configuration_best_practices.html[Next: ESXi Configuration Best Practices]
+link:ehr-meditech-deploy_esxi_configuration_best_practices.html[Next: ESXi Configuration Best Practices.]
