--- a/ehr-meditech-deploy/ehr-meditech-deploy_deployment_and_configuration_overview.adoc
+++ b/ehr-meditech-deploy/ehr-meditech-deploy_deployment_and_configuration_overview.adoc
@@ -18,15 +18,14 @@ summary: This section details storage guidance for FlexPod deployment in environ
 // 2021-05-07 11:13:53.125662
 //
 
-[.lead]
 The NetApp storage guidance for FlexPod deployment that is provided in this document covers:
 
-* Environments that use ONTAP.
-* Environments that use Cisco UCS blade and rack-mount servers.
+* Environments that use ONTAP
+* Environments that use Cisco UCS blade and rack-mount servers
 
 This document does not cover:
 
-* Detailed deployment of the FlexPod Datacenter environment.
+* Detailed deployment of the FlexPod Datacenter environment
 +
 For more information, see https://www.cisco.com/c/en/us/td/docs/unified_computing/ucs/UCS_CVDs/flexpod_esxi65u1_n9fc.html[FlexPod Datacenter with FC Cisco Validated Design^] (CVD).
 
@@ -49,6 +48,6 @@ The following figure illustrates the 32Gb FC/40GbE topology diagram for a MEDITE
 
 image:ehr-meditech-deploy_image5.png[Error: Missing Graphic Image]
 
-Always use the http://mysupport.netapp.com/matrix/[Interoperability Matrix Tool (IMT)^] to validate that all versions of software and firmware are supported. The table in <xref> Appendix A lists the infrastructure hardware and software components that were used in the solution testing.
+Always use the http://mysupport.netapp.com/matrix/[Interoperability Matrix Tool (IMT)^] to validate that all versions of software and firmware are supported. The table in section link:ehr-meditech-deploy_meditech_modules_and_components.html["MEDITECH modules and components"] lists the infrastructure hardware and software components that were used in the solution testing.
 
-link:ehr-meditech-deploy_base_infrastructure_configuration.html[Next: Base infrastructure Configuration]
+link:ehr-meditech-deploy_base_infrastructure_configuration.html[Next: Base infrastructure Configuration.]
