--- a/express-direct-attach-aff220-deploy/express-direct-attach-aff220-deploy_program_summary.adoc
+++ b/express-direct-attach-aff220-deploy/express-direct-attach-aff220-deploy_program_summary.adoc
@@ -5,7 +5,7 @@ keywords: flexpod, express, vmware, vsphere, aff, direct, attached, ip, based, s
 summary: FlexPod Express is a predesigned, best practice architecture that is built on the Cisco Unified Computing System (Cisco UCS), the Cisco Nexus family of switches, and NetApp storage technologies. FlexPod Datacenter and FlexPod Express are optimal platforms for virtualization and for bare-metal OSs and enterprise workloads.
 ---
 
-= FlexPod Express with VMware vSphere 6.7U1 and NetApp AFF A220 with Direct-Attached IP-Based Storage
+= NVA-1131-DEPLOY: FlexPod Express with VMware vSphere 6.7U1 and NetApp AFF A220 with Direct-Attached IP-Based Storage
 :hardbreaks:
 :nofooter:
 :icons: font
@@ -18,7 +18,6 @@ summary: FlexPod Express is a predesigned, best practice architecture that is bu
 // 2021-05-20 10:50:15.346703
 //
 
-[.lead]
 Sree Lakshmi Lanka, NetApp
 
 Industry trends indicate a vast data center transformation toward shared infrastructure and cloud computing. In addition, organizations seek a simple and effective solution for remote and branch offices, leveraging the technology with which they are familiar in their data center.
