--- a/express-direct-attach-aff220-deploy/express-direct-attach-aff220-deploy_solution_overview.adoc
+++ b/express-direct-attach-aff220-deploy/express-direct-attach-aff220-deploy_solution_overview.adoc
@@ -18,7 +18,6 @@ summary: This FlexPod Express solution is part of the FlexPod converged infrastr
 // 2021-05-20 10:50:15.375787
 //
 
-[.lead]
 This FlexPod Express solution is part of the FlexPod converged infrastructure program.
 
 == FlexPod Converged Infrastructure Program
@@ -31,7 +30,7 @@ As depicted in the figure below, the FlexPod program includes three solutions: F
 * *FlexPod Datacenter* delivers an optimal multipurpose foundation for various workloads and applications.
 * *FlexPod Select* incorporates the best aspects of FlexPod Datacenter and tailors the infrastructure to a given application.
 
-The figure below shows the technical components of the solution.
+The following figure shows the technical components of the solution.
 
 image:express-direct-attach-aff220-deploy_image2.png[Error: Missing Graphic Image]
 
@@ -46,7 +45,7 @@ The NVA program offers customers a verified architecture for NetApp solutions. A
 
 This guide details the design of FlexPod Express with direct- attached NetApp storage. The following sections list the components used for the design of this solution.
 
-=== Hardware Components
+=== Hardware components
 
 * NetApp AFF A220
 * Cisco UCS Mini
@@ -54,22 +53,22 @@ This guide details the design of FlexPod Express with direct- attached NetApp st
 * Cisco UCS VIC 1440/1480.
 * Cisco Nexus 3000 Series Switches
 
-=== Software Components
+=== Software components
 
 * NetApp ONTAP 9. 5
 * VMWare vSphere 6.7U1
 * Cisco UCS Manager 4.0(1b)
 * Cisco NXOS Firmware 7.0(3)I6(1)
 
-== Solution Technology
+== Solution technology
 
 This solution leverages the latest technologies from NetApp, Cisco, and VMware. It features the new NetApp AFF A220 running ONTAP 9.5, dual Cisco Nexus 31108PCV switches, and Cisco UCS B200 M5 servers that run VMware vSphere 6.7U1. This validated solution uses Direct Connect IP storage over 10GbE technology.
 
-The figure below illustrates FlexPod Express with VMware vSphere 6.7U1 IP- Based Direct Connect architecture.
+The following figure illustrates FlexPod Express with VMware vSphere 6.7U1 IP-Based Direct Connect architecture.
 
 image:express-direct-attach-aff220-deploy_image3.png[Error: Missing Graphic Image]
 
-== Use Case Summary
+== Use case summary
 
 The FlexPod Express solution can be applied to several use cases, including the following:
 
