--- a/fp-express-tech-spec/fp-express-tech-spec_cisco_components.adoc
+++ b/fp-express-tech-spec/fp-express-tech-spec_cisco_components.adoc
@@ -5,7 +5,7 @@ keywords: cisco, components, blade, server, options, rack, ucs, nexus, switches
 summary: Cisco is a substantial contributor to the FlexPod Express design and architecture; it contributes the compute and networking layers of the solution.
 ---
 
-= Cisco Components
+= Cisco components
 :hardbreaks:
 :nofooter:
 :icons: font
@@ -18,15 +18,14 @@ summary: Cisco is a substantial contributor to the FlexPod Express design and ar
 // 2021-05-20 13:19:48.607313
 //
 
-[.lead]
 Cisco is a substantial contributor to the FlexPod Express design and architecture; it contributes the compute and networking layers of the solution. This section describes the Cisco UCS and Cisco Nexus components that are available for FlexPod Express.
 
-== Cisco UCS B-Series Blade Server Options
+== Cisco UCS B-Series blade server options
 
-Cisco UCS B-Series blades currently supported in the Cisco UCS Mini platform are B200 M5 and B420 M4. Other blades will be listed in the table below as they become supported in the Cisco UCS Mini platform.
+Cisco UCS B-Series blades currently supported in the Cisco UCS Mini platform are B200 M5 and B420 M4. Other blades will be listed in the following table as they become supported in the Cisco UCS Mini platform.
 
 |===
-|Cisco UCS B-Series Server |Part Number |Technical Specifications
+|Cisco UCS B-Series server |Part number |Technical specifications
 
 |Cisco UCS B200 M5
 |UCSB-B200-M5
@@ -42,12 +41,12 @@ http://www.cisco.com/c/dam/en/us/products/collateral/servers-unified-computing/u
 http://www.cisco.com/c/dam/en/us/products/collateral/servers-unified-computing/ucs-b-series-blade-servers/b420m4-spec-sheet.pdf
 |===
 
-== Cisco UCS C-Series Rack Server Options
+== Cisco UCS C-Series rack server options
 
-Cisco UCS C-Series blades are available in one- and two- rack unit (RU) varieties, with various CPU, memory, and I/O options. The part numbers listed in the table below are for the base server; they do not include CPUs, memory, disk drives, PCIe cards, or the Cisco FEX. Multiple configuration options are available and supported in FlexPod.
+Cisco UCS C-Series blades are available in one-rack and two-rack unit (RU) varieties, with various CPU, memory, and I/O options. The part numbers listed in the following table are for the base server; they do not include CPUs, memory, disk drives, PCIe cards, or the Cisco FEX. Multiple configuration options are available and supported in FlexPod.
 
 |===
-|Cisco UCS C-Series Rack Server |Part Number |Technical Specifications
+|Cisco UCS C-Series rack server |Part number |Technical specifications
 
 |Cisco UCS C220 M4
 |UCSC-C220-M4S
@@ -63,7 +62,7 @@ http://www.cisco.com/c/dam/en/us/products/collateral/servers-unified-computing/u
 http://www.cisco.com/c/dam/en/us/products/collateral/servers-unified-computing/ucs-c-series-rack-servers/c460m4_specsheet.pdf
 |===
 
-== Cisco Nexus Switches
+== Cisco Nexus switches
 
 Redundant switches are required for all FlexPod Express architectures.
 
@@ -71,10 +70,10 @@ The FlexPod Express with NetApp AFF or FAS architecture is built with the Cisco 
 
 The FlexPod Express with E-Series can be deployed with a standard switch.
 
-The table below lists the part numbers for the Cisco Nexus series chassis; they do not include additional SFP or add-on modules.
+The following table lists the part numbers for the Cisco Nexus series chassis; they do not include additional SFP or add-on modules.
 
 |===
-|Cisco Nexus Series Switch |Part Number |Technical Specifications
+|Cisco Nexus Series switch |Part number |Technical specifications
 
 |Cisco Nexus 3048
 |N3K-C3048TP-1GE
@@ -94,17 +93,17 @@ http://www.cisco.com/c/en/us/products/collateral/switches/nexus-9000-series-swit
 https://www.cisco.com/c/en/us/products/collateral/switches/nexus-3000-series-switches/data_sheet_c78-729483.html
 |===
 
-== Cisco Support Licensing Options
+== Cisco Support licensing options
 
 Valid SMARTnet support contracts are required on all Cisco equipment in the FlexPod Express architecture.
 
 [NOTE]
 The licenses required and the part numbers for those licenses should be verified by your sales representative because they can differ for different products.
 
-The table below lists the Cisco support licensing options.
+The following table lists the Cisco support licensing options.
 
 |===
-|Cisco Support Licensing |License Guide
+|Cisco Support licensing |License guide
 
 |SMARTnet 24x7x4
 |
