--- a/fp-express-tech-spec/fp-express-tech-spec_connectivity_requirements.adoc
+++ b/fp-express-tech-spec/fp-express-tech-spec_connectivity_requirements.adoc
@@ -5,7 +5,7 @@ keywords: connectivity, requirements, flexpod, express, aff, fas, e, series
 summary: This section describes the connectivity requirements for the different versions of FlexPod Express.
 ---
 
-= Connectivity Requirements
+= Connectivity requirements
 :hardbreaks:
 :nofooter:
 :icons: font
@@ -18,19 +18,18 @@ summary: This section describes the connectivity requirements for the different 
 // 2021-05-20 13:19:48.590847
 //
 
-[.lead]
 This section describes the connectivity requirements for the different versions of FlexPod Express.
 
-== Connectivity Requirements for FlexPod Express with NetApp FAS
+== Connectivity requirements for FlexPod Express with NetApp FAS
 
 The connectivity requirements for FlexPod Express with NetApp FAS include:
 
-* NetApp FAS storage controllers must be directly connected to the Cisco Nexus switches, except in the Cisco UCS- managed configuration, where storage controllers are connected to the fabric interconnects.
+* NetApp FAS storage controllers must be directly connected to the Cisco Nexus switches, except in the Cisco UCS-managed configuration, where storage controllers are connected to the fabric interconnects.
 * No additional equipment can be placed inline between the core FlexPod components.
 * Virtual port channels (vPCs) are required to connect the Cisco Nexus 3000/9000 series switches to the NetApp storage controllers.
 * Although it is not required, enabling jumbo frame support is recommended throughout the environment.
 
-== Connectivity Requirements for FlexPod Express with NetApp E-Series
+== Connectivity requirements for FlexPod Express with NetApp E-Series
 
 The connectivity requirements for FlexPod Express with E-Series include:
 
@@ -38,7 +37,7 @@ The connectivity requirements for FlexPod Express with E-Series include:
 * No additional equipment should be placed inline between the core FlexPod components.
 * vPCs are required between the fabric interconnects and the Ethernet switches.
 
-== Connectivity Requirements for FlexPod Express with NetApp AFF
+== Connectivity requirements for FlexPod Express with NetApp AFF
 
 The connectivity requirements for FlexPod Express with NetApp AFF include:
 
