--- a/fp-express-tech-spec/fp-express-tech-spec_flexpod_platforms.adoc
+++ b/fp-express-tech-spec/fp-express-tech-spec_flexpod_platforms.adoc
@@ -5,12 +5,12 @@ keywords: flexpod, platforms, datacenter, express, select, technical, specificat
 summary: This document provides the technical specifications for the FlexPod Express platform.
 ---
 
-= FlexPod Platforms
+= FlexPod platforms
 :hardbreaks:
 :nofooter:
 :icons: font
 :linkattrs:
-:imagesdir: ./media/
+:imagesdir: ./../media/
 
 //
 // This file was created with NDAC Version 2.0 (August 17, 2020)
@@ -18,7 +18,7 @@ summary: This document provides the technical specifications for the FlexPod Exp
 // 2021-05-20 13:19:48.562908
 //
 
-[.lead]
+
 There are three FlexPod platforms:
 
 * *FlexPod Datacenter.* This platform is a massively scalable virtual data center infrastructure suited for workload enterprise applications, virtualization, VDI, and public and private cloud. FlexPod Datacenter has its own specifications, which are documented in https://www.netapp.com/us/media/tr-4036.pdf[TR-4036: FlexPod Datacenter Technical Specifications^].
