--- a/fp-express-tech-spec/fp-express-tech-spec_legacy_equipment.adoc
+++ b/fp-express-tech-spec/fp-express-tech-spec_legacy_equipment.adoc
@@ -5,7 +5,7 @@ keywords: legacy, equipment, legacy, storage, controller, fas, disk, shelf
 summary: This section lists the NetApp legacy disk shelf, FAS controller, and storage controller options.
 ---
 
-= Legacy Equipment
+= Legacy equipment
 :hardbreaks:
 :nofooter:
 :icons: font
@@ -18,11 +18,10 @@ summary: This section lists the NetApp legacy disk shelf, FAS controller, and st
 // 2021-05-20 13:19:48.639761
 //
 
-[.lead]
-The table below lists the NetApp legacy storage controller options.
+The following table lists the NetApp legacy storage controller options.
 
 |===
-|Storage Controller |FAS Part Number |Technical Specifications
+|Storage controller |FAS part number |Technical specifications
 
 |FAS2520
 |Based on individual options chosen
@@ -42,10 +41,10 @@ http://www.netapp.com/us/products/storage-systems/fas2500/fas2500-tech-specs.asp
 http://www.netapp.com/us/products/storage-systems/fas8000/fas8000-tech-specs.aspx
 |===
 
-The table below lists the NetApp legacy disk shelf options for NetApp FAS.
+The following table lists the NetApp legacy disk shelf options for NetApp FAS.
 
 |===
-|Disk Shelf |Part Number |Technical Specifications
+|Disk shelf |Part number |Technical specifications
 
 |DE1600
 |E-X5682A-DM-0E-R6-C
@@ -61,12 +60,12 @@ link:http://www.netapp.com/us/products/storage-systems/e2800/e2800-tech-specs.as
 link:http://www.netapp.com/us/products/storage-systems/e2800/e2800-tech-specs.aspx[Disk Shelves Technical Specifications Supported Drives on NetApp Hardware Universe]
 |===
 
-== NetApp Legacy FAS Controllers
+== NetApp legacy FAS controllers
 
-The table below lists the legacy NetApp FAS controller options.
+The following table lists the legacy NetApp FAS controller options.
 
 |===
-|Current Component |FAS2554 |FAS2552 |FAS2520
+|Current component |FAS2554 |FAS2552 |FAS2520
 
 |Configuration
 |2 controllers in a 4U chassis
