--- a/security-ransomware/security-ransomware_additional_information.adoc
+++ b/security-ransomware/security-ransomware_additional_information.adoc
@@ -5,7 +5,7 @@ keywords: additional, information, flexpod, ransomeware
 summary: To learn more about the information that is described in this document, review the following documents and/or websites.
 ---
 
-= Additional Information
+= Additional information
 :hardbreaks:
 :nofooter:
 :icons: font
@@ -18,7 +18,6 @@ summary: To learn more about the information that is described in this document,
 // 2021-05-20 14:17:51.447904
 //
 
-[.lead]
 To learn more about the information that is described in this document, review the following documents and/or websites:
 
 * NetApp Snapshot software
